--- a/styles.css
+++ b/styles.css
@@ -59,3 +59,7 @@ a:hover {
     color: var(--cinza-hover);
     background-color: #ffffff;
 }
+
+.button:hover {
+    text-decoration: underline;
+}
